--- a/Dictionary/app/src/main/res/layout/activity_vocab_quiz.xml
+++ b/Dictionary/app/src/main/res/layout/activity_vocab_quiz.xml
@@ -18,5 +18,7 @@
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/word_meaning"></ListView>
+        android:id="@+id/word_meaning"
+        android:entries="@array/words"
+        ></ListView>
 </LinearLayout>
