Added custom view and custom adapter

--- a/Dictionary/app/src/main/res/layout/word_layout.xml
+++ b/Dictionary/app/src/main/res/layout/word_layout.xml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        
-        android:text=""/>
-    <TextView
-        android:layout_width=""
-        android:layout_height="" />
-
+        android:id="@+id/lower"/>
+    <ImageView
+        android:id="@+id/icon"
+        android:layout_width="22px"
+        android:layout_height="22px"
+        android:layout_marginLeft="4px"
+        android:layout_marginRight="10px"
+        android:layout_marginTop="4px"
+        android:src="@drawable/ic_launcher" >
+    </ImageView>
 </LinearLayout>
